# DatabaseProject

./: CMakeLists.txt  DatabaseProject.sln
DatabaseProject/: CMakeLists.txt  DatabaseProject.vcxproj  DatabaseProject.vcxproj.filters  Main.cpp  Makefile  ReadStream.cpp  ReadStream.h  StreamException.cpp  StreamException.h  WriteStream.cpp  WriteStream.h  boost_x64_release.props  test.txt
databaseproject/: CMakeLists.txt  DatabaseProject.vcxproj.filters  Main.cpp  ReadStream.cpp  ReadStream.h  StreamException.cpp  StreamException.h  WriteStream.cpp  WriteStream.h
